--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "bootstrap": "^5.0.0-beta3",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.8",
+        "sass-loader": "^10.1.1",
         "tailwindcss": "^2.0.1"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.9.1"
     }
 }
