--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/main.js": "/js/main.js",
+    "/js/vue.js": "/js/vue.js",
     "/css/app.css": "/css/app.css",
     "/css/main.css": "/css/main.css"
 }
