--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.1",
-        "vue": "^2.6.12"
+        "laravel-echo": "^1.10.0",
+        "moment": "^2.29.1",
+        "pusher-js": "^7.0.3",
+        "vue": "^2.6.12",
+        "vue-select": "^3.11.2"
     }
 }
