--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/main.js": "/js/main.js",
     "/js/vue.js": "/js/vue.js",
     "/css/app.css": "/css/app.css",
+    "/css/select.css": "/css/select.css",
     "/css/main.css": "/css/main.css"
 }
