--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "moment": "^2.29.1",
         "pusher-js": "^7.0.3",
         "vue": "^2.6.12",
+        "vue-infinite-loading": "^2.4.5",
         "vue-select": "^3.11.2"
     }
 }
