--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/main.js": "/js/main.js",
-    "/js/vue.js": "/js/vue.js",
-    "/css/app.css": "/css/app.css",
-    "/css/select.css": "/css/select.css",
-    "/css/main.css": "/css/main.css"
+    "/js/app.js": "/js/app.js?id=3ad0565b19b0129623b8",
+    "/js/main.js": "/js/main.js?id=e5d2a29326756e3bc06c",
+    "/js/vue.js": "/js/vue.js?id=a1e8e0b80bc69475850c",
+    "/css/app.css": "/css/app.css?id=e8d754d83cf4389fcd70",
+    "/css/select.css": "/css/select.css?id=654e48918cb92ac46b7b",
+    "/css/main.css": "/css/main.css?id=753d9d201018b4f3b0a8"
 }
