Updated .env.example and Readme File

--- a/.env.example
+++ b/.env.example
@@ -40,17 +40,17 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=1187065
-PUSHER_APP_KEY=62246aafb1a986986991
-PUSHER_APP_SECRET=b69d3d6b8e2a32985d59
-PUSHER_APP_CLUSTER=ap2
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-FACEBOOK_CLIENT_ID=2485473271596116
-FACEBOOK_CLIENT_SECRET=da940850cac54d0f97e8458bc52606e2
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 
-GMAIL_CLIENT_ID=647794982108-kf3ah16f99qqmqlupbah05htgcg31rd2.apps.googleusercontent.com
-GMAIL_CLIENT_SECRET=3o9tZ5U-OSkvtmebFoVoYROq
+GMAIL_CLIENT_ID=
+GMAIL_CLIENT_SECRET=
